add file_cron_test and multi_into

--- a/multi_inot/cleanup/Dockerfile
+++ b/multi_inot/cleanup/Dockerfile
@@ -17,6 +17,7 @@ RUN chmod +x /code/action_C.sh
 RUN chmod +x /code/inot_C.sh
 
 RUN mkdir -p /code/observed_dir/
+RUN mkdir -p /code/log_dir/
 
 
 # Run the inotifywait script on container startup
